--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "flowtradeai-backend",
   "version": "1.0.0",
-  "description": "FlowTradeAI backend",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "axios": "^1.6.2"
+    "express": "^4.18.2"
   }
 }
