--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "flowtradeai-backend",
+  "name": "test-backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
