--- a/package.json
+++ b/package.json
@@ -1,12 +1,5 @@
-{
-  "name": "test-backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
-  }
+"dependencies": {
+  "express": "^4.18.2",
+  "cors": "^2.8.5",
+  "axios": "^1.6.2"
 }
