--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "flowtradeai-backend",
   "version": "1.0.0",
-  "description": "FlowTradeAI backend service",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "FlowTradeAI",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   }
