--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "flowtradeai-backend",
   "version": "1.0.0",
-  "type": "module",
+  "description": "FlowTradeAI backend",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
