--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "flowtradeai-backend",
   "version": "1.0.0",
+  "description": "FlowTradeAI Backend Service",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
